commit animepages info header resize

--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -166,3 +166,10 @@
     .tableBottom{
         margin-bottom: 0px;
     }
+
+    /* header resize */
+    @media (max-width: 575.98px) {
+        .headerResize {
+        font-size: 80%;
+        }
+    }
