--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -118,11 +118,32 @@
         color: white;
     }
 
+    .catalogCard:hover .overlay {
+        opacity: 1;
+      }
+
+      
     /* Card Title background */
+
     .anchor-bg-color {
-        top: 65%;
-        height: 25%;
+        top: auto;
+        bottom: 10%;
+        opacity: 0;
+        transition: .5s ease;
+      
+        height: auto;
         background-color: rgba(0, 0, 0, 0.5);
+    }
+
+    @media (max-width: 575.98px) {
+        .anchor-bg-color {
+            top: auto;
+            bottom: 10%;
+            opacity: 1;
+            transition: .5s ease;
+            height: auto;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
     }
 
     /* Slideshow caption on phone */
@@ -166,4 +187,6 @@
     .tableBottom{
         margin-bottom: 0px;
     }
+
+
 
