--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -155,6 +155,12 @@
         .pcarousel {
         font-size: 75%;
         }
+        
+        .smCaption{
+            height: 120px;
+            position: relative;
+            background-color: rgba(0, 0, 0, 1);
+        }
     }
 
     /* Card border remove */
