--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -192,7 +192,10 @@
         margin-bottom: 0px;
     }
 
-        
+    .animeList ul{
+        list-style-type: none;
+    }
+
     /* ============ desktop view ============ */
     @media all and (min-width: 1199.98px) {
         .navbar .nav-item .dropdown-menu{ display: none; }
