commit ReWork Design - Rework Beta finish - bugfix carousel

--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -152,7 +152,7 @@
         }
         
         .smCaption{
-            height: 130px;
+            height: auto;
             position: relative;
             background-color: rgba(0, 0, 0, 1);
         }
