commit ReWork Design - Apus sugesti to feedback - css bug fix

--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -226,7 +226,7 @@
       
     /* Card Title background */
 
-    .anchor-bg-color {
+    .anchor-bg-color-update {
         position: absolute;
         top: 0;
         bottom: 0;
