--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -141,6 +141,12 @@
         }
     }
 
+    @media (max-width: 575.98px) {
+        .card-title {
+            margin-bottom: 0rem;
+        }
+    }
+
     /* Slideshow caption on phone */
     @media (max-width: 575.98px) {
         .h5carousel {
@@ -264,11 +270,6 @@
         padding: 0.2rem;
         }  
 
-    .cardUpdate h6 {
-        margin-bottom: 0.2rem;
-    }
-    
-
     .cardUpdate.card-title{
         color: black;
     }
@@ -301,6 +302,34 @@
         font-size: 1rem;
         line-height: 1.5;
         border-radius: 0.25rem;
+    }
+      
+    .btn-primary {
+        color: #fff;
+        background-color: #007bffd0;
+        border-color: #007bffd0;
+      }
+
+    .bg-primary {
+    background-color: #007bffd0 !important;
+    }
+    
+    .btn-warning {
+    color: #212529;
+    background-color: #ffc107d0;
+    border-color: #ffc107d0;
+    }
+
+    .btn-success {
+        color: #fff;
+        background-color: #28a746d0;
+        border-color: #28a746d0;
+      }
+
+    .btn-danger {
+    color: #fff;
+    background-color: #dc3546d0;
+    border-color: #dc3546d0;
     }
       
     
