--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -1,5 +1,6 @@
     /*Sidebar Social*/
     .social {
+        width: auto;
         text-align: center;
         padding-bottom: 10px;
         color: white;
