--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -355,5 +355,13 @@
     .card-img-top{
         border-radius: 0px;
     }
-      
     
+    .example::-webkit-scrollbar {
+        display: none;
+      }
+      
+      /* Hide scrollbar for IE, Edge and Firefox */
+      .example {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+      }
